--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.9.9"
   }
 }
